Fixed joseki page overflow on mobile

--- a/src/views/Joseki/Joseki.styl
+++ b/src/views/Joseki/Joseki.styl
@@ -91,7 +91,9 @@
     }
 
     .left-col {
-        padding-left: 1 em;
+        @media screen and (min-width: 801px) {
+            padding-left: 1 em;
+        }
         padding-top: 1em;
     }
 
